syntax = "proto3";

package pbkv;

import "bscp.io/pkg/protocol/core/base/base.proto";

option go_package = "bscp.io/pkg/protocol/core/kv;pbkv";

// Hook source resource reference: pkg/dal/table/kv.go
message Kv {
    uint32          id = 1;
    KvSpec          spec = 2;
    KvAttachment    attachment = 3;
    pbbase.Revision revision = 4;
}

// KvSpec source resource reference: pkg/dal/table/kv.go
message KvSpec {
    string name    = 1;
    string kv_type = 2;
    string value   = 3;
}

// KvAttachment source resource reference: pkg/dal/table/kv.go
message KvAttachment {
    uint32 biz_id = 1;
    uint32 app_id = 2;
}