syntax = "proto3";

package pbrg;

option go_package = "bscp.io/pkg/protocol/core/released-group;pbrg";

// ReleasedGroup source resource reference: pkg/dal/table/released_group.go
message ReleasedGroup {
    uint32 id           = 1;
    uint32 group_id     = 2;
    uint32 app_id       = 3;
    uint32 release_id   = 4;
    uint32 strategy_id  = 5;
    bool   edited       = 6;
    uint32 biz_id       = 7;
}